[SSE] fix collapse button position

--- a/apps/common/main/resources/less/colors-table-white.less
+++ b/apps/common/main/resources/less/colors-table-white.less
@@ -321,6 +321,7 @@
         --toolbar-simple-shadow: var(--shadow-toolbar, none);
         --toolbar-simple-content-padding-top: 3px;
         --layout-padding-hor-toolbar-simple: 5px;
+        --simple-editor-layout-collapse-button-rigth: 8px;
 
         --content-padding-top: 8px;
     }
