--- a/apps/common/main/resources/less/colors-table.less
+++ b/apps/common/main/resources/less/colors-table.less
@@ -374,6 +374,7 @@
     --toolbar-simple-shadow: 0 none;
     --toolbar-simple-content-padding-top: 0;
     --layout-padding-hor-toolbar-simple: 0;
+    --simple-editor-layout-collapse-button-rigth: 3px;
 }
 
 // Background
