--- a/apps/spreadsheeteditor/main/resources/less/toolbar.less
+++ b/apps/spreadsheeteditor/main/resources/less/toolbar.less
@@ -94,7 +94,7 @@
         padding-right: var(--layout-padding-hor-toolbar-simple);
 
         .ce-group-expand {
-            right: calc(3px + var(--layout-padding-hor-toolbar-simple, 0px));
+            right: var(--simple-editor-layout-collapse-button-rigth, 0px);
         }
     }
 }
